<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="16dp">

    <EditText
        android:id="@+id/subName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/subject_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/subTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/teacher_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/subTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/start_time"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/subType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/class_type"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/subRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/Room"
        android:inputType="textPersonName"
        android:autofillHints="" />

</LinearLayout>