<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#009688"
        android:progressTint="#009688" />

    <LinearLayout
        android:id="@+id/LLmonday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMonday"
                android:layout_width="0dp"
                android:layout_weight="3.80"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:clickable="false"
                android:gravity="center_horizontal"
                android:text="@string/Monday"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivAdd1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_add" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMonday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLTuesday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTuesday"
                android:layout_width="0dp"
                android:layout_weight="3.80"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:clickable="false"
                android:gravity="center_horizontal"
                android:text="@string/Tuesday"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivAdd2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTuesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLWednesday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWednesday"
                android:layout_width="0dp"
                android:layout_weight="3.80"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:clickable="false"
                android:gravity="center_horizontal"
                android:text="@string/Wednesday"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivAdd3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWednesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLThursday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvThursday"
                android:layout_width="0dp"
                android:layout_weight="3.80"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/Thursday"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivAdd4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvThursday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLFriday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFriday"
                android:layout_width="0dp"
                android:layout_weight="3.80"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/Friday"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivAdd5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFriday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

    </LinearLayout>

</LinearLayout>